Added logging file to the project

--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-server.port=80
+server.port=8282
 
 multipart.maxFileSize: 1MB
 multipart.maxRequestSize: 1MB
+
+
+logging.level.org.springframework.web=DEBUG
+
+#output to a file
+logging.file=genrat.log
