--- a/web/pom.xml
+++ b/web/pom.xml
@@ -3,9 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>org.genrat</groupId>
 	<artifactId>web</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 
 	<parent>
 		<groupId>org.genrat</groupId>
@@ -13,14 +11,23 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
-
-	<!--parent> <groupId>org.springframework.boot</groupId> <artifactId>spring-boot-starter-parent</artifactId> 
-		<version>1.5.9.RELEASE</version> </parent -->
-
 	<properties>
-		<java.version>1.8</java.version>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring-boot.version>1.5.9.RELEASE</spring-boot.version>
 	</properties>
+	
+	<dependencies>
+		<dependency>
+			<groupId>org.genrat</groupId>
+			<artifactId>core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>${spring-boot.version}</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
@@ -38,14 +45,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${spring-boot.version}</version>
-		</dependency>
-	</dependencies>
-
-
 </project>
