--- a/web/pom.xml
+++ b/web/pom.xml
@@ -16,7 +16,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring-boot.version>1.5.9.RELEASE</spring-boot.version>
 	</properties>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.genrat</groupId>
@@ -26,6 +26,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 			<version>${spring-boot.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.4</version>
 		</dependency>
 	</dependencies>
 
